// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration test should call correct middlewares and validation request to "/api/branch" with invalid body 1`] = `
Array [
  Array [
    Object {
      "level": 4,
      "message": "POST call to /api/branches",
      "requestId": 111,
    },
  ],
  Array [
    Object {
      "level": 2,
      "message": "Validation failed at field branch for call to /api/branches",
      "requestId": 111,
    },
  ],
]
`;

exports[`integration test should call correct middlewares, validation and controller for valid request to "/api/branch" 1`] = `
Array [
  Array [
    Object {
      "level": 4,
      "message": "POST call to /api/branches",
      "requestId": 74,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Validation succeded for call to /api/branches",
      "requestId": 74,
    },
  ],
]
`;

exports[`integration test should call full route if every parameter is valid 1`] = `
Array [
  Array [
    Object {
      "level": 4,
      "message": "POST call to /api/pullrequests/123/",
      "requestId": 222,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Validation succeded for call to /api/pullrequests/123",
      "requestId": 222,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Validation succeded for call to /api/pullrequests/123",
      "requestId": 222,
    },
  ],
]
`;

exports[`integration test should call root level middleware for any request 1`] = `
Array [
  Array [
    Object {
      "level": 4,
      "message": "GET call to /api",
      "requestId": 37,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Call to unknown path: /api",
      "requestId": 37,
    },
  ],
]
`;

exports[`integration test should call static middleware if it doesnt match anything else for gets 1`] = `Array []`;

exports[`integration test should return default 404 without catchAll and matching route  1`] = `
Array [
  Array [
    Object {
      "level": 4,
      "message": "POST call to /api/pullrequests/asad",
      "requestId": 185,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Validation of path parameters failed for call to /api/pullrequests/asad. Trying next route.",
      "requestId": 185,
    },
  ],
]
`;

exports[`integration test should skip to next route if path param is invalid 1`] = `
Array [
  Array [
    Object {
      "level": 4,
      "message": "POST call to /api/pullrequests/asad",
      "requestId": 148,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Validation of path parameters failed for call to /api/pullrequests/asad. Trying next route.",
      "requestId": 148,
    },
  ],
  Array [
    Object {
      "level": 3,
      "message": "Call to unknown path: /api/pullrequests/asad",
      "requestId": 148,
    },
  ],
]
`;
